[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["Eraldo Energy <eraldo@eraldo.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
#strawberry-graphql-django = "^0.41.1"
strawberry-graphql-django = {git = "https://github.com/strawberry-graphql/strawberry-django.git", rev = "refs/pull/540/merge"}
#strawberry-graphql = "^0.232.2"
pytest = "^8.2.2"
pytest-django = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
